css_components/home/card.css
.cards-wrapper {
    padding: 3rem 7rem;
    position: relative;
}

.cards-grid-wrapper {
    padding: 3rem 7rem;
}

.card-header {
    font-size: 1.5rem;
    margin-bottom: .5rem;
}

.cards-scrollable-container {
    display: flex;
    overflow-x: auto;
    gap: 1rem;
    scroll-snap-type: x mandatory;
}

.cards-grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
    gap: 1rem;
}

.cards-scrollable-container::-webkit-scrollbar {
    display: none;
}

.card {
    display: flex;
    flex-direction: column;
    width: 18rem;
    scroll-snap-align: start;
}

.card img {
    height: 22rem;
    object-fit: cover;
}

.card-name-and-price-wrapper {
    display: flex;
    justify-content: space-between;
    font-size: 1.3rem;
    gap: 1rem;
}

.card-color-description-wrapper {
    font-size: 1.2rem;
}

.card-scroll-button {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 4rem;
    height: 3.5rem;
    border: none;
    cursor: pointer;
    background-position: center;
    border-radius: .5rem;
}

.card-scroll-button:hover {
    background-color: #c6c6c6;
}

.card-scroll-button.left {
    left: 100px;
    background-image: url('/assets/icons/left_arrow.svg');
}

.card-scroll-button.right {
    right: 100px;
    background-image: url('/assets/icons/right_arrow.svg');
}

@media (max-width: 1024px) {
    .cards-wrapper {
        padding: 2rem 1rem;
    }

    .card-scroll-button.left {
        left: 5px;
    }

    .card-scroll-button.right {
        right: 5px;
    }

    .cards-grid-wrapper {
        padding: 3rem 1rem;
    }

    .cards-grid-container {
        display: grid;
        grid-template-columns: repeat(2, minmax(150px, 1fr));
        gap: 1.5rem;
    }

    .card.mobile-card {
        width: auto;
    }

    .card.mobile-card img {
        height: auto;
    }

    .card-name-and-price-wrapper {
        font-size: 1.1rem;
    }

    .card-color-description-wrapper {
        font-size: 1rem;
    }
}

